Bug 1264270 - Parser should output attributes in source order, not reversed; r=hsivonen,bgrins