devtools/client/inspector/markup/markup.js
@@ -3196,9 +3196,7 @@ function parseAttributeValues(attr, doc) {
     }
   }
 
-  // Attributes return from DOMParser in reverse order from how they are
-  // entered.
-  return attributes.reverse();
+  return attributes;
 }
 
 /**
